# efrei-sport-climbing-aws-app

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  samconfig.toml  template.yaml
functions/algolia_users_indexer/: README.md  app.ts  jest.config.ts  package-lock.json  package.json  tsconfig.json
functions/calendar_generator/: README.md
functions/calendar_generator/src/: s3.images.ts
functions/discord_dm_worker/: AGENT_STUDIO_PROMPT.md  AGENT_STUDIO_PROMT_LITE.md  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
functions/discord_dm_worker/scripts/: backfill.association.announcements.ts  cleanup_orphan_session_messages.mjs
functions/discord_dm_worker/src/: agent.tools.ts  app.ts  association.announcements.compactor.ts  association.announcements.ts  conversation.store.ts  discord.dm.worker.ts
functions/discord_event_handler/: README.md
functions/discord_event_handler/src/: discord.handler.ts  discord.interaction.ts  discord.utils.ts
functions/discord_garbage_collector/: README.md  app.ts
functions/helloasso_event_handler/: README.md  app.ts  jest.config.ts  package-lock.json
functions/helloasso_event_handler/src/: s3.tickets.ts
functions/tickets_registor/: README.md
functions/weekly_session_recommender/: .eslintrc.js  .npmignore  README.md  app.ts  package-lock.json  package.json
functions/weekly_session_recommender/src/: recommender.handler.ts
layers/commons/: algolia.agent.ts  algolia.client.ts  algolia.insights.ts  calendar.events.ts  dynamodb.association_announcements.ts  dynamodb.dm_conversations.ts  dynamodb.session_recommendations.ts  dynamodb.sessions.ts  dynamodb.tickets.ts  dynamodb.types.ts  dynamodb.user_calendar_feeds.ts  dynamodb.user_stats.ts  s3.files.ts  session.discord.embed.ts  session.discord.workflows.ts  session.recommendations.ts
tests/: test_backfill_algolia_sessions.py  test_backfill_algolia_users.py  test_build_user_stats_and_algolia_backfill.py  test_check_sessions_user_refs.py  test_generate_future_sessions.py  test_recommend_algolia_sessions.py  test_send_simulated_session_insights.py
utils/: __init__.py  backfill_algolia_users.py  check_sessions_user_refs.py
utils/algolia/: __init__.py  backfill_algolia_sessions.py  backfill_algolia_users.py  build_user_stats_and_algolia_backfill.py  recommend_algolia_sessions.py  send_simulated_session_insights.py
utils/sessions/: __init__.py  generate_future_sessions.py
utils/validation/: __init__.py  check_sessions_user_refs.py
(+11 files in other folders)
